...
                android:layout_height="wrap_content"
                android:drawablePadding="12dp"
                android:textColor="@android:color/black"
                app:drawableStartCompat="@drawable/ic_email" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/txt_ver_publicaciones"
                app:strokeColor="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
...
